# http_rust

./: Cargo.toml  README.md  structure.drawio
src/: auth.rs  database.rs  handlers.rs  main.rs  template.rs  websocket.rs
static/: auth.css  chat.css  index.css  scripts.js  styles.css
templates/: auth.html  chat.html  index.html
