[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.7.4", features=["ws"]}
tokio = {version="1.36.0", features=["full"]}
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = {version="1.18.0", features=["v4"]}
futures-util = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
sqlite = "0.37.0"
sha2 = "0.10.9"
askama = "0.14.0"
serde_json = "1.0.143"
